@@ -9290,17 +9290,18 @@ possible.  Examples have been seen where merely loading a DLL that
 contained calls to C++ I/O upset @R{}'s own C I/O (for example by
 resetting buffers on open files).
 
-Most @R{} header files can be included within C++ programs, and they
+Most @R{} header files can be included within C++ programs but they
 should @strong{not} be included within an @code{extern "C"} block (as
 they include system headers@footnote{Even including C system headers in
 such a block has caused compilation errors.}).  It may not be possible
-to include some @R{} headers as they in turn include C header files that
-may cause conflicts---if this happens, try defining @samp{NO_C_HEADERS}
-before including the @R{} headers, and include C++ versions (such as
-@samp{cmath} and @samp{cstdlib}) of the appropriate headers yourself
-before the @R{} headers. (Headers @file{R.h} and @file{Rmath.h} support
-@samp{NO_C_HEADERS}: @file{S.h} does not.  Nor does @file{Rinternals.h}
-but that switches to the equivalent C++ headers when included from C++.)
+to include some @R{} headers as they in turn include system header files
+that may cause conflicts---if this happens, try defining
+@samp{NO_C_HEADERS} before including the @R{} headers, and include C++
+versions (such as @samp{cmath} and @samp{cstdlib}) of the appropriate
+headers yourself before the @R{} headers. (Headers @file{R.h} and
+@file{Rmath.h} support @samp{NO_C_HEADERS}: the legacy header@file{S.h}
+does not.  Nor does @file{Rinternals.h} but that switches to the
+equivalent C++ headers when included from C++.)
 
 By default header @file{Rmath.h} includes @file{math.h}.  Header
 @file{R.h} includes
@@ -11425,19 +11426,8 @@ This will include several other header files from the directory
 there that can be included too, but many of the features they contain
 should be regarded as undocumented and unstable.
 
-An alternative is to include the header file @file{S.h}, which may be
-useful when porting code from @Sl{}.  This includes rather less than
-@file{R.h}, and has some extra compatibility definitions (for example
-the @code{S_complex} type from @Sl{}).
-
-The defines used for compatibility with @Sl{} sometimes causes
-conflicts (notably with Windows headers), and the known
-problematic defines can be removed by defining @code{STRICT_R_HEADERS}.
-
 Most of these header files, including all those included by @file{R.h},
-can be used from C++ code.  Some others need to be included within an
-@code{extern "C"} declaration, and for clarity this is advisable for all
-@R{} header files.
+can be used from C++ code.
 
 @quotation Note
 Because @R{} re-maps many of its external names to avoid clashes with
